# OneWireHub

./: .bumpversion.cfg  .clang-format  .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Arduino.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DS18B20.cpp  DS18B20.h  DS2401.cpp  DS2401.h  DS2405.cpp  DS2405.h  DS2408.cpp  DS2408.h  DS2413.cpp  DS2413.h  DS2423.cpp  DS2423.h  DS2433.cpp  DS2433.h  DS2438.cpp  DS2438.h  DS2450.cpp  DS2450.h  DS2890.cpp  DS2890.h  OneWireHub.cpp  OneWireHub.h  Pipfile  README.md  keywords.txt  library.json  library.properties  main.cpp
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: compile.yml  sphinx_to_pages.yml
MovmentSensor/: MovmentSensor.ino
TempSensor/: TempSensor.ino
docs/: README.md
docs/source/: changelog.md  conf.py  contributing.md  device_support.md  features_hub.md  help_me_help_you.md  how_hub_works.md  index.rst  introduction.md  robots.txt  setup.md  test_setup.md
examples/ADC_BAE910/: ADC_BAE910.ino
examples/BAE910_device/: BAE910_device.ino
examples/DS18B20_asInterface/: DS18B20_asInterface.ino
examples/DS18B20_thermometer/: DS18B20_thermometer.ino
examples/DS2401_serial/: DS2401_serial.ino
examples/DS2405_switch/: DS2405_switch.ino
examples/DS2408_switch/: DS2408_switch.ino
examples/DS2413_switch/: DS2413_switch.ino
examples/DS2423_RAM/: DS2423_RAM.ino
examples/DellAC/: DellAC.ino
src/: Arduino.h  BAE910.cpp  BAE910.h  CMakeLists.txt  DS18B20.cpp  DS18B20.h  DS2401.cpp  DS2401.h  DS2405.cpp  DS2405.h  DS2408.cpp  DS2408.h  DS2413.cpp  DS2413.h  DS2423.cpp  DS2423.h  DS2430.cpp  DS2430.h  DS2431.cpp  DS2431.h  DS2433.cpp  DS2433.h  DS2434.cpp  DS2434.h  DS2438.cpp  DS2438.h  DS2450.cpp  DS2450.h  DS2502.cpp  DS2502.h  DS2503.cpp  DS2503.h  DS2506.cpp  DS2506.h  DS2890.cpp  DS2890.h  DellAC.cpp  DellAC.h  OneWireHub.cpp  OneWireHub.h  (+5 more)
(+48 files in other folders)
